Fixes GC OOM during native compilation